--- a/config/sync/filter.format.basic_html.yml
+++ b/config/sync/filter.format.basic_html.yml
@@ -18,10 +18,10 @@ filters:
   filter_html:
     id: filter_html
     provider: filter
-    status: true
+    status: false
     weight: -49
     settings:
-      allowed_html: '<em> <strong> <cite> <blockquote cite> <code> <ul type> <ol start type> <li> <dl> <dt> <dd> <button class=""> <h2 id class=""> <h3 id class=""> <h4 id class=""> <h5 id class=""> <h6 id> <p class=""> <br> <span class=""> <img data-responsive-image-style src alt data-entity-type data-entity-uuid data-align data-caption height width class=""> <a href hreflang data-entity-type data-entity-uuid title class=""> <table class="center-table no-style"> <caption> <tbody> <thead> <tfoot> <th colspan rowspan> <td colspan rowspan> <tr> <drupal-entity data-entity-type data-entity-uuid data-view-mode data-entity-embed-display data-entity-embed-display-settings data-align data-caption data-embed-button data-langcode alt title>'
+      allowed_html: '<cite> <dl> <dt> <dd> <blockquote cite> <ul type> <ol type> <button class> <span class> <img data-responsive-image-style src alt data-entity-type data-entity-uuid data-align data-caption height width class> <a hreflang data-entity-type data-entity-uuid title class> <table class="center-table no-style"> <drupal-entity data-entity-type data-entity-uuid data-view-mode data-entity-embed-display data-entity-embed-display-settings data-align data-caption data-embed-button data-langcode alt title> <h2 id> <h3 id> <h4 id> <h5 id> <h6 id>'
       filter_html_help: false
       filter_html_nofollow: false
   filter_align:
@@ -62,10 +62,10 @@ filters:
     weight: -47
     settings:
       spamspan_at: ' [at] '
-      spamspan_use_graphic: '1'
-      spamspan_dot_enable: '1'
+      spamspan_use_graphic: true
+      spamspan_dot_enable: true
       spamspan_dot: ' [dot] '
-      spamspan_use_form: '0'
+      spamspan_use_form: false
       spamspan_form_pattern: '<a href="%url?goto=%email">%displaytext</a>'
       spamspan_form_default_url: contact
       spamspan_form_default_displaytext: 'contact form'
@@ -106,11 +106,16 @@ filters:
     status: false
     weight: -37
     settings:
+      image_style_bildblock_desktop: '0'
+      image_style_bildblock_desktop_narrow: '0'
+      image_style_bildblock_mobile: '0'
+      image_style_bildblock_tablet_portrait: '0'
       image_style_gallery_full: '0'
       image_style_header_slideshow: '0'
       image_style_header_slideshow_smartphone: '0'
       image_style_header_slideshow_tablet_portrait: '0'
       image_style_image_gallery_thumb: '0'
+      image_style_infoblock_desktop: '0'
       image_style_inhaltsbild_halbe_breite: '0'
       image_style_inhaltsbild_mobile_volle_breite: '0'
       image_style_inline_full_width: '0'
@@ -134,7 +139,9 @@ filters:
     status: true
     weight: -41
     settings:
+      responsive_style_bildblock_klein: '0'
       responsive_style_header_slideshow: '0'
+      responsive_style_infoblock: '0'
       responsive_style_inhaltsbild_volle_breite: '1'
       responsive_style_inhaltsbild_z_halbe_breite: '1'
       responsive_style_narrow: '0'
