--- a/config/sync/editor.editor.full_html.yml
+++ b/config/sync/editor.editor.full_html.yml
@@ -1,80 +1,25 @@
-uuid: d5fc6ef3-c43f-419f-a4f4-cbcf2036c4db
+uuid: 4176cec1-c7cc-4a03-b0f7-3e9bcfa873a3
 langcode: de
 status: true
 dependencies:
   config:
     - filter.format.full_html
   module:
-    - ckeditor
-    - editor_file
-third_party_settings:
-  editor_file:
-    status: true
-    scheme: public
-    directory: inline-files
-    extensions: 'txt pdf doc docx xls xlsx'
-    max_size: '15 MB'
-_core:
-  default_config_hash: 967ijj7p6i7rwrYl7r08WQFeCY_c23YAh0h8u-w_CXM
+    - ckeditor5
 format: full_html
-editor: ckeditor
+editor: ckeditor5
 settings:
   toolbar:
-    rows:
-      -
-        -
-          name: Formatting
-          items:
-            - Bold
-            - Italic
-            - Strike
-            - Superscript
-            - Subscript
-            - '-'
-            - RemoveFormat
-        -
-          name: Linking
-          items:
-            - DrupalLink
-            - DrupalUnlink
-        -
-          name: Lists
-          items:
-            - BulletedList
-            - NumberedList
-        -
-          name: Media
-          items:
-            - Blockquote
-            - DrupalImage
-            - Table
-            - DrupalFile
-            - HorizontalRule
-        -
-          name: 'Block Formatting'
-          items:
-            - Format
-            - Styles
-        -
-          name: Tools
-          items:
-            - ShowBlocks
-            - Source
-        -
-          name: 'Entity Embed'
-          items:
-            - node
+    items:
+      - heading
+      - bold
+      - italic
   plugins:
-    drupallink:
-      linkit_enabled: true
-      linkit_profile: default
-    stylescombo:
-      styles: "table.center-table|Tabelle zentrieren\r\ntable.no-style|Tabelle Format zurücksetzen"
-image_upload:
-  status: true
-  scheme: public
-  directory: inline-images
-  max_size: ''
-  max_dimensions:
-    width: null
-    height: null
+    ckeditor5_heading:
+      enabled_headings:
+        - heading2
+        - heading3
+        - heading4
+        - heading5
+        - heading6
+image_upload: {  }
