--- a/composer.json
+++ b/composer.json
@@ -44,11 +44,12 @@
         "drupal/field_group": "^3.2",
         "drupal/field_validation": "1.0.0-beta3",
         "drupal/focal_point": "^1.5",
+        "drupal/hms_field": "*",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/inline_responsive_images": "^2.3",
         "drupal/jquery_ui_datepicker": "^1.3",
         "drupal/jquery_ui_touch_punch": "^1.0",
-        "drupal/libraries": "^3.0@beta",
+        "drupal/libraries": "*",
         "drupal/linkit": "6.0.0-beta3",
         "drupal/maillog": "^1.0@beta",
         "drupal/markup": "^1.0@beta",
@@ -62,7 +63,7 @@
         "drupal/quick_node_clone": "^1.15",
         "drupal/responsive_tables_filter": "^1.16",
         "drupal/rules": "3.x-dev",
-        "drupal/shield": "^1.4",
+        "drupal/shield": "*",
         "drupal/spamspan": "^3.1",
         "drupal/time_field": "^2.0",
         "drupal/token": "^1.11",
