--- a/web/modules/contrib/libraries/libraries.info.yml
+++ b/web/modules/contrib/libraries/libraries.info.yml
@@ -1,10 +1,9 @@
 name: Libraries
 type: module
 description: Allows version-dependent and shared usage of external libraries.
-core: 8.x
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^9.4 || ^10
 
-# Information added by Drupal.org packaging script on 2021-01-04
-version: '8.x-3.0-beta1'
+# Information added by Drupal.org packaging script on 2023-06-17
+version: '4.0.4'
 project: 'libraries'
-datestamp: 1609758296
+datestamp: 1687020891
