--- a/web/modules/contrib/shield/composer.json
+++ b/web/modules/contrib/shield/composer.json
@@ -2,11 +2,9 @@
     "name": "drupal/shield",
     "type": "drupal-module",
     "license": "GPL-2.0-or-later",
+    "description": "Creates a general shield for the site.",
     "require-dev": {
-        "drupal/key": "^1.0"
-    },
-    "require": {
-        "drupal/core": "^8.6 || ^9"
+        "drupal/key": "^1.16"
     },
     "extra": {
         "branch-alias": {
