--- a/web/modules/contrib/shield/shield.info.yml
+++ b/web/modules/contrib/shield/shield.info.yml
@@ -3,11 +3,13 @@ description: 'Creates a general shield for the site.'
 package: 'Administration'
 
 type: module
-core_version_requirement: ^8.7.7 || ^9
+core_version_requirement: ^9.2 || ^10
+dependencies:
+  - drupal:path_alias
 
 configure: shield.settings
 
-# Information added by Drupal.org packaging script on 2020-03-30
-version: '8.x-1.4'
+# Information added by Drupal.org packaging script on 2022-08-31
+version: '8.x-1.7'
 project: 'shield'
-datestamp: 1585608549
+datestamp: 1661968926
