--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,13 @@
         "drupal/allowed_formats": "^2.0",
         "drupal/antibot": "^2.0",
         "drupal/backup_migrate": "^5.0",
-        "drupal/better_exposed_filters": "^5.2",
+        "drupal/better_exposed_filters": "*",
         "drupal/better_formats": "1.x-dev",
-        "drupal/block_class": "^1.3",
+        "drupal/block_class": "*",
         "drupal/businessgroup_zymphonies_theme": "^2.0",
         "drupal/chosen": "^3.0",
         "drupal/classy": "^1.0",
-        "drupal/colorbox": "^1.10",
+        "drupal/colorbox": "*",
         "drupal/content_access": "^2.0",
         "drupal/core-composer-scaffold": "^9.2",
         "drupal/core-recommended": "^9.2",
