Weitere Contrib Module upgedatet

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "drupal/antibot": "^2.0",
         "drupal/backup_migrate": "^5.0",
         "drupal/better_exposed_filters": "*",
-        "drupal/better_formats": "1.x-dev",
+        "drupal/better_formats": "^1.0@beta",
         "drupal/block_class": "*",
         "drupal/businessgroup_zymphonies_theme": "^2.0",
         "drupal/chosen": "^3.0",
@@ -42,7 +42,7 @@
         "drupal/eva": "^3.0",
         "drupal/extlink": "*",
         "drupal/field_group": "*",
-        "drupal/field_validation": "1.0.0-beta3",
+        "drupal/field_validation": "^1.1",
         "drupal/focal_point": "*",
         "drupal/hms_field": "*",
         "drupal/inline_entity_form": "^1.0@RC",
@@ -58,6 +58,7 @@
         "drupal/masquerade": "^2.0@RC",
         "drupal/maxlength": "*",
         "drupal/metatag": "*",
+        "drupal/node_class": "^2.0",
         "drupal/override_node_options": "*",
         "drupal/paragraphs": "^1.15",
         "drupal/paragraphs_features": "^1.16",
