--- a/web/modules/contrib/better_formats/composer.json
+++ b/web/modules/contrib/better_formats/composer.json
@@ -2,7 +2,7 @@
   "name": "drupal/better_formats",
   "description": "Enhances the core input format system by managing input format defaults and settings.",
   "type": "drupal-module",
-  "license": "GPL-2.0+",
+  "license": "GPL-2.0-or-later",
   "minimum-stability": "dev",
   "require": { }
 }
