--- a/web/modules/contrib/node_class/node_class.info.yml
+++ b/web/modules/contrib/node_class/node_class.info.yml
@@ -1,5 +1,9 @@
 type: module
 name : Node class
-description : 'Adds classes specific to node. Patched dev version because no Drupal 9 ready version available on June 19th 2021 by Thomas Moseler'
-version: '8.x-1.dev-patched'
+description : 'Adds classes specific to node.'
 core_version_requirement: ^8.8 || ^9
+
+# Information added by Drupal.org packaging script on 2021-10-16
+version: '2.0.0'
+project: 'node_class'
+datestamp: 1634365436
