--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,7 @@
         "drupal/masquerade": "^2.0@RC",
         "drupal/maxlength": "*",
         "drupal/metatag": "*",
-        "drupal/node_class": "^2.0",
+        "drupal/node_class": "^2.0.x-dev",
         "drupal/override_node_options": "*",
         "drupal/paragraphs": "^1.15",
         "drupal/paragraphs_features": "^2",
@@ -123,6 +123,11 @@
             "web/themes/custom/{$name}": [
                 "type:drupal-custom-theme"
             ]
+        },
+        "patches": {
+            "drupal/inline_responsive_images" : {
+                "Make Module Drupal 10 compatible" : "https://www.drupal.org/files/issues/2022-11-28/inline_responsive_images-3297434-5_0.patch"
+            }
         }
     }
 }
