--- a/web/modules/contrib/inline_responsive_images/inline_responsive_images.info.yml
+++ b/web/modules/contrib/inline_responsive_images/inline_responsive_images.info.yml
@@ -3,7 +3,7 @@ type: module
 description: 'Allows you to use responsive images in the WYSIWYG editor.'
 package: Editor
 core: 8.x
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 dependencies:
   - drupal:responsive_image
   - drupal:editor
