--- a/composer.json
+++ b/composer.json
@@ -77,7 +77,8 @@
         "drupal/video_embed_field": "^2.5",
         "drupal/view_unpublished": "^1.1",
         "drupal/webform": "^6.2",
-        "drush/drush": "^10.5"
+        "drush/drush": "^10.5",
+        "mglaman/composer-drupal-lenient": "*"
     },
     "conflict": {
         "drupal/drupal": "*"
@@ -89,7 +90,8 @@
         "allow-plugins": {
             "composer/installers": true,
             "drupal/core-composer-scaffold": true,
-            "cweagans/composer-patches": true
+            "cweagans/composer-patches": true,
+            "mglaman/composer-drupal-lenient": true
         }
     },
     "extra": {
