--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,16 @@
         "docs": "https://www.drupal.org/docs/user_guide/en/index.html",
         "chat": "https://www.drupal.org/node/314178"
     },
-    "repositories": [
-        {
+    "repositories": {
+        "lenient": {
+            "type": "composer",
+            "url": "https://packages.drupal.org/lenient"
+        },
+        "0": {
             "type": "composer",
             "url": "https://packages.drupal.org/8"
         }
-    ],
+    },
     "require": {
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.7",
@@ -127,9 +131,12 @@
             ]
         },
         "patches": {
-            "drupal/inline_responsive_images" : {
-                "Make Module Drupal 10 compatible" : "https://www.drupal.org/files/issues/2022-11-28/inline_responsive_images-3297434-5_0.patch"
+            "drupal/inline_responsive_images": {
+                "Make Module Drupal 10 compatible": "https://www.drupal.org/files/issues/2022-11-28/inline_responsive_images-3297434-5_0.patch"
             }
+        },
+        "drupal-lenient": {
+            "allowed-list": ["drupal/inline_responsive_images"]
         }
     }
 }
