--- a/composer.json
+++ b/composer.json
@@ -132,6 +132,9 @@
         "patches": {
             "drupal/inline_responsive_images": {
                 "Make Module Drupal 10 compatible": "https://www.drupal.org/files/issues/2022-11-28/inline_responsive_images-3297434-5_0.patch"
+            },
+            "drupal/businessgroup_zymphonies_theme": {
+                "Automated Rector Patch": "https://www.drupal.org/files/issues/2022-07-18/businessgroup_zymphonies_theme.2.0.1.rector.patch"
             }
         },
         "drupal-lenient": {
