--- a/composer.json
+++ b/composer.json
@@ -134,7 +134,8 @@
                 "Make Module Drupal 10 compatible": "https://www.drupal.org/files/issues/2022-11-28/inline_responsive_images-3297434-5_0.patch"
             },
             "drupal/businessgroup_zymphonies_theme": {
-                "Automated Rector Patch": "https://www.drupal.org/files/issues/2022-07-18/businessgroup_zymphonies_theme.2.0.1.rector.patch"
+                "Automated Rector Patch": "https://www.drupal.org/files/issues/2022-07-18/businessgroup_zymphonies_theme.2.0.1.rector.patch",
+                "Make info.yml Drupal 10 compatible": "patches/businessgroup_zymphonies_theme/info-yml-d10-compatible.patch"
             }
         },
         "drupal-lenient": {
