--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
         "drupal/eva": "^3.0",
         "drupal/extlink": "*",
         "drupal/field_group": "*",
-        "drupal/field_validation": "1.0.0-beta3",
+        "drupal/field_validation": "^1.1",
         "drupal/focal_point": "*",
         "drupal/hms_field": "*",
         "drupal/inline_entity_form": "^1.0@RC",
