Bartik und Seven deinstalliert, Claro Block-Settings

--- a/config/sync/block.block.claro_breadcrumbs.yml
+++ b/config/sync/block.block.claro_breadcrumbs.yml
@@ -1,5 +1,5 @@
 uuid: 9a38ec7f-99f8-4a0a-b458-f2852f734074
-langcode: en
+langcode: de
 status: true
 dependencies:
   module:
@@ -16,7 +16,7 @@ provider: null
 plugin: system_breadcrumb_block
 settings:
   id: system_breadcrumb_block
-  label: Breadcrumbs
+  label: Pfadnavigation
   label_display: '0'
   provider: system
 visibility: {  }
