--- a/config/sync/block.block.claro_primary_local_tasks.yml
+++ b/config/sync/block.block.claro_primary_local_tasks.yml
@@ -1,5 +1,5 @@
 uuid: aedf0a25-2f0b-45d6-85e1-71faa1544ea7
-langcode: en
+langcode: de
 status: true
 dependencies:
   theme:
@@ -14,7 +14,7 @@ provider: null
 plugin: local_tasks_block
 settings:
   id: local_tasks_block
-  label: 'Primary tabs'
+  label: 'Primäre Reiter'
   label_display: '0'
   provider: core
   primary: true
