--- a/config/sync/block.block.claro_secondary_local_tasks.yml
+++ b/config/sync/block.block.claro_secondary_local_tasks.yml
@@ -1,5 +1,5 @@
 uuid: becde351-2faa-4787-b660-60d45c3de590
-langcode: en
+langcode: de
 status: true
 dependencies:
   theme:
@@ -14,7 +14,7 @@ provider: null
 plugin: local_tasks_block
 settings:
   id: local_tasks_block
-  label: 'Secondary tabs'
+  label: 'Sekundäre Reiter'
   label_display: '0'
   provider: core
   primary: false
