--- a/config/sync/field_validation.rule_set.comment_comment.yml
+++ b/config/sync/field_validation.rule_set.comment_comment.yml
@@ -17,3 +17,5 @@ field_validation_rules:
     field_name: comment_body
     column: value
     error_message: 'Sie dürfen im Kommentar nicht auf andere Websites verlinken.'
+    roles: {  }
+    condition: {  }
