--- a/web/themes/hsk_zymphonies/hsk_zymphonies.libraries.yml
+++ b/web/themes/hsk_zymphonies/hsk_zymphonies.libraries.yml
@@ -17,7 +17,7 @@ header-slideshow:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 hsk-menu:
   version: VERSION
@@ -27,7 +27,7 @@ hsk-menu:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 hsk-js-tabs:
   version: VERSION
@@ -36,7 +36,7 @@ hsk-js-tabs:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 fancybox:
   version: VERSION
@@ -49,7 +49,7 @@ fancybox:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 colorbox:
   version: VERSION
@@ -62,7 +62,7 @@ colorbox:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 tablesaw:
   version: VERSION
@@ -75,4 +75,4 @@ tablesaw:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
