--- a/web/modules/custom/hsk_news/hsk_news.info.yml
+++ b/web/modules/custom/hsk_news/hsk_news.info.yml
@@ -1,5 +1,5 @@
 name: HSK News
 description: Enhancements for News
 type: module
-core_version_requirement: ^8.8 || ^9
+core_version_requirement: ^8.8 || ^9 || ^10
 package: HSK
