--- a/web/modules/custom/hsk_block/hsk_block.info.yml
+++ b/web/modules/custom/hsk_block/hsk_block.info.yml
@@ -1,5 +1,5 @@
 name: HSK Block
 description: Custom Blocks for HSK
 type: module
-core_version_requirement: ^9
+core_version_requirement: ^9 || ^10
 package: HSK
