--- a/web/modules/custom/hsk_images/hsk_images.info.yml
+++ b/web/modules/custom/hsk_images/hsk_images.info.yml
@@ -1,7 +1,7 @@
 name: HSK Images
 description: Image-related functinality custom for HSK
 type: module
-core_version_requirement: ^8.8 || ^9
+core_version_requirement: ^8.8 || ^9 || ^10
 version: VERSION
 dependencies:
   - drupal:image
