--- a/web/modules/custom/hsk_pgn_formatter/hsk_pgn_formatter.info.yml
+++ b/web/modules/custom/hsk_pgn_formatter/hsk_pgn_formatter.info.yml
@@ -1,6 +1,6 @@
 name: HSK PGN Field Formatter
 description: Display PGN Code inside text areas with a PGN Viewer
 type: module
-core_version_requirement: ^8.8 || ^9
+core_version_requirement: ^8.8 || ^9 || ^10
 version: VERSION
 package: HSK
