--- a/config/sync/editor.editor.basic_html.yml
+++ b/config/sync/editor.editor.basic_html.yml
@@ -20,7 +20,7 @@ settings:
       - bulletedList
       - numberedList
       - link
-      - insertTable
+      - drupalInsertImage
       - sourceEditing
   plugins:
     ckeditor5_heading:
@@ -53,4 +53,15 @@ settings:
     ckeditor5_list:
       reversed: false
       startIndex: true
-image_upload: {  }
+    ckeditor5_imageResize:
+      allow_resize: true
+    linkit_extension:
+      linkit_enabled: false
+image_upload:
+  status: true
+  scheme: public
+  directory: inline-images
+  max_size: '5 MB'
+  max_dimensions:
+    width: 0
+    height: 0
