--- a/composer.json
+++ b/composer.json
@@ -79,7 +79,7 @@
         "drupal/video_embed_field": "^2.5",
         "drupal/view_unpublished": "^1.1",
         "drupal/webform": "^6.2",
-        "drush/drush": "^12.2",
+        "drush/drush": "*",
         "mglaman/composer-drupal-lenient": "*"
     },
     "conflict": {
