Empfänger im Kontaktformular angepasst, Julius eingeschlossen

--- a/config/sync/contact.form.feedback.yml
+++ b/config/sync/contact.form.feedback.yml
@@ -9,9 +9,8 @@ label: Kontakt
 recipients:
   - info@rufzeichen-online.de
   - lukahoffmann@aol.com
-  - nils@familie-baum.net
-  - h.schilling@kabelmail.de
   - maxwall@outlook.com
+  - jul.stephan@hotmail.de
 reply: ''
 weight: 0
 message: 'Ihre Nachricht wurde gesendet.'
