Mehr Emfpänger vom Kontaktformular

--- a/config/sync/contact.form.feedback.yml
+++ b/config/sync/contact.form.feedback.yml
@@ -11,6 +11,8 @@ recipients:
   - lukahoffmann@aol.com
   - maxwall@outlook.com
   - jul.stephan@hotmail.de
+  - nolting-dennis@web.de
+  - christian_polster@yahoo.com
 reply: ''
 weight: 0
 message: 'Ihre Nachricht wurde gesendet.'
