Config Export von live nach Upgrade

--- a/config/sync/core.entity_view_display.paragraph.slideshow_image.slideshow.yml
+++ b/config/sync/core.entity_view_display.paragraph.slideshow_image.slideshow.yml
@@ -34,6 +34,8 @@ content:
     settings:
       responsive_image_style: header_slideshow
       image_link: ''
+      image_loading:
+        attribute: eager
     third_party_settings: {  }
     weight: 0
     region: content
