--- a/config/sync/views.view.header_par_slideshow.yml
+++ b/config/sync/views.view.header_par_slideshow.yml
@@ -150,6 +150,8 @@ display:
           settings:
             responsive_image_style: header_slideshow
             image_link: ''
+            image_loading:
+              attribute: eager
           group_column: ''
           group_columns: {  }
           group_rows: true
