--- a/config/sync/views.view.news.yml
+++ b/config/sync/views.view.news.yml
@@ -247,6 +247,8 @@ display:
           settings:
             responsive_image_style: news_thumb_startseite
             image_link: content
+            image_loading:
+              attribute: eager
           group_column: ''
           group_columns: {  }
           group_rows: true
@@ -314,6 +316,15 @@ display:
             date_format: date_no_time
             custom_date_format: ''
             timezone: ''
+            tooltip:
+              date_format: ''
+              custom_date_format: ''
+            time_diff:
+              enabled: false
+              future_format: '@interval hence'
+              past_format: '@interval ago'
+              granularity: 2
+              refresh: 60
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -950,6 +961,15 @@ display:
             date_format: medium
             custom_date_format: ''
             timezone: ''
+            tooltip:
+              date_format: ''
+              custom_date_format: ''
+            time_diff:
+              enabled: false
+              future_format: '@interval hence'
+              past_format: '@interval ago'
+              granularity: 2
+              refresh: 60
           group_column: value
           group_columns: {  }
           group_rows: true
