--- a/config/sync/core.entity_view_display.paragraph.imageblock_small.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.imageblock_small.default.yml
@@ -22,6 +22,8 @@ content:
     settings:
       responsive_image_style: bildblock_klein
       image_link: ''
+      image_loading:
+        attribute: eager
     third_party_settings: {  }
     weight: 0
     region: content
