--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -75,6 +75,7 @@ module:
   paragraphs_features: 0
   path: 0
   path_alias: 0
+  phpass: 0
   quick_node_clone: 0
   responsive_image: 0
   responsive_tables_filter: 0
