--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -8,6 +8,7 @@ dependencies:
   module:
     - comment
     - contact
+    - file
     - filter
     - search
     - shortcut
@@ -23,6 +24,7 @@ permissions:
   - 'access content'
   - 'access shortcuts'
   - 'access site-wide contact form'
+  - 'delete own files'
   - 'edit own comments'
   - 'post comments'
   - 'search content'
