--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -57,6 +57,7 @@ module:
   jquery_ui_slider: 0
   jquery_ui_touch_punch: 0
   language: 0
+  layout_builder: 0
   layout_discovery: 0
   link: 0
   linkit: 0
