--- a/config/sync/layout_builder_component_attributes.settings.yml
+++ b/config/sync/layout_builder_component_attributes.settings.yml
@@ -2,17 +2,17 @@ _core:
   default_config_hash: FeaKKw0yr9F16G9il1GU3RTg8oPfQ9DN4Ulgi3vmkoA
 langcode: de
 allowed_block_attributes:
-  id: true
+  id: false
   class: true
   style: true
-  data: true
+  data: false
 allowed_block_title_attributes:
-  id: true
+  id: false
   class: true
   style: true
   data: true
 allowed_block_content_attributes:
-  id: true
+  id: false
   class: true
   style: true
-  data: true
+  data: false
